fix header styling on mobile

--- a/style.css
+++ b/style.css
@@ -2,6 +2,10 @@ html {
     font-size: 100px;
 }
 
+body {
+    margin: 0;
+}
+
 p, h1, h2, h3, span, input, li, a {
     font-family: 'Montserrat', sans-serif;
 }
@@ -16,7 +20,6 @@ p {
 }
 
 .wrapper {
-    height: 100vh;
     display: flex;
     flex-flow: column;
     justify-content: center;
@@ -39,7 +42,7 @@ button {
     background-image: linear-gradient(#15A1F8, #065B9A);
     width: 100vw;
     border-radius: 0px 0px 40% 40%;
-    padding: 50px 0px 200px 0px;
+    padding: 50px 0px 20px 0px;
     display: flex;
     min-height: 200px;
     flex-direction: column;
@@ -136,6 +139,7 @@ button {
     flex-wrap: wrap;
     justify-content: center;
     margin-top: -110px;
+    z-index: 2;
 }
 
 #controls {
